--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <h1>
   {{title}}
 </h1>
+<p>Lalalalalalala</p>
+<draw-console-char char="P" [fontwidth]="16" [fg]="2" [bg]="3" ></draw-console-char>
+<draw-console-display></draw-console-display>
