Working basic draw mode

--- a/src/app/console-display/console-display.component.html
+++ b/src/app/console-display/console-display.component.html
@@ -1,3 +1,12 @@
-<div class="console-display">
+<div #console class="console-display" (window:resize)="c.log(console.getBoundingClientRect())">
   <draw-cursor [fontwidth]="fontwidth" ></draw-cursor>
+  <draw-console-char *ngFor="let coords of Object.keys(CharsServ.chars)"
+                     style="position: absolute"
+                     [char]="CharsServ.chars[coords].ch"
+                     [fontwidth]="fontwidth"
+                     [fg]="CharsServ.chars[coords].fg"
+                     [bg]="CharsServ.chars[coords].bg"
+                     [style.top.px]="(parseInt(coords.split('_')[1]) + CharsServ.offset[1]) * fontwidth * 2"
+                     [style.left.px]="(parseInt(coords.split('_')[0]) + CharsServ.offset[0]) * fontwidth"></draw-console-char>
+  <draw-modes-manager></draw-modes-manager>
 </div>
