--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,32 @@
   {{title}}
 </h1>
 <p>Lalalalalalala</p>
-<draw-console-char char="P" [fontwidth]="16" [fg]="2" [bg]="3" ></draw-console-char>
-<draw-console-display></draw-console-display>
+<label>Font size</label>
+<select #sizes (change)="fontwidth = +sizes.value">
+  <option value="8">8x16</option>
+  <option value="10">10x20</option>
+  <option value="11">11x22</option>
+  <option value="12">12x24</option>
+  <option value="14">14x28</option>
+  <option value="16" selected="selected">16x32</option>
+</select>
+<draw-console-char char="P" [fontwidth]="fontwidth" [fg]="2" [bg]="3" ></draw-console-char>
+<draw-console-display [fontwidth]="fontwidth" ></draw-console-display>
+<div class="horizontal-container">
+  <div class="inner-container border" >
+    <label>Drawing cursor (Ctrl-V)</label>
+    <draw-console-char class="border" [char]="NormalMode.draw_chars[NormalMode.draw_char_index]"
+                       [fontwidth]="16" [fg]="0" [bg]="15" ></draw-console-char>
+  </div>
+  <div class="inner-container border">
+    <label>Foreground color (Ctrl-C)</label>
+    <draw-console-char class="border" [char]="'\u2588'" [fontwidth]="16"
+                       [fg]="ColorChange.fg" bg="1"></draw-console-char>
+  </div>
+  <div class="inner-container border">
+    <label>Background color (Ctrl-X)</label>
+    <draw-console-char class="border" [char]="'\u2588'" [fontwidth]="16"
+                       [fg]="ColorChange.bg" bg="1"></draw-console-char>
+  </div>
+</div>
+
