Working basic draw mode

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,4 +30,4 @@
                        [fg]="ColorChange.bg" bg="1"></draw-console-char>
   </div>
 </div>
-
+<draw-color-changer></draw-color-changer>
