--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,19 +15,21 @@
 <draw-console-display [fontwidth]="fontwidth" ></draw-console-display>
 <div class="horizontal-container">
   <div class="inner-container border" >
-    <label>Drawing cursor (Ctrl-V)</label>
+    <label>Drawing cursor - v</label>
     <draw-console-char class="border" [char]="NormalMode.draw_chars[NormalMode.draw_char_index]"
                        [fontwidth]="16" [fg]="0" [bg]="15" ></draw-console-char>
   </div>
-  <div class="inner-container border">
-    <label>Foreground color (Ctrl-C)</label>
+  <div class="inner-container border relative">
+    <label>Foreground color - c</label>
     <draw-console-char class="border" [char]="'\u2588'" [fontwidth]="16"
                        [fg]="ColorChange.fg" bg="1"></draw-console-char>
+    <draw-color-changer [color_type]="'foreground'" class="color-dialog"></draw-color-changer>
   </div>
-  <div class="inner-container border">
-    <label>Background color (Ctrl-X)</label>
+
+  <div class="inner-container border relative">
+    <label>Background color - x</label>
     <draw-console-char class="border" [char]="'\u2588'" [fontwidth]="16"
                        [fg]="ColorChange.bg" bg="1"></draw-console-char>
+    <draw-color-changer [color_type]="'background'" class="color-dialog"></draw-color-changer>
   </div>
 </div>
-<draw-color-changer></draw-color-changer>
