Added box-drawing mode

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,7 @@
   <div class="horizontal-container">
     <label [class.border]="ModesManager['normal_mode'].active" >Normal mode - n</label>
     <label [class.border]="ModesManager['scrolling_mode'].active" >Scroll mode - m</label>
+    <label [class.border]="ModesManager['boxdraw_mode'].active" >Boxdraw mode - b</label>
   </div>
   <div class="horizontal-container">
     <div class="inner-container border" >
