Added aditional box drawing characters (32x16 only)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
   <option value="16" selected="selected">16x32</option>
 </select>
 <draw-console-display [fontwidth]="fontwidth" ></draw-console-display>
+<draw-text-export></draw-text-export>
 <div>
   <div class="horizontal-container">
     <label [class.border]="ModesStatus.modes['normal_mode']" >Normal mode - Enter</label>
