Implemented pixel draw mode

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,7 @@
     <label [class.border]="ModesStatus.modes['scrolling_mode']" >Scroll - m</label>
     <label [class.border]="ModesStatus.modes['boxdraw_mode']" >Boxdraw - b</label>
     <label [class.border]="ModesStatus.modes['text_mode']" >Text - t</label>
+    <label [class.border]="ModesStatus.modes['pixeldraw']">Pixeldraw - p</label>
   </div>
   <div class="horizontal-container">
     <div class="inner-container border" >
